--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <br>
         <center><div class="titlu" >OrientMd</div></center>
         <br>
-        <img class="img-pr" src="sp2.jpg" width="100%" height="100%" ><br><br>
+        <img class="img-pr" src="sp2.jpg" width="100%" ><br><br>
         <a name="2"><div class="text-1"  ><center><br>
             <h2>Orient</h2>
             Iti asiguram echipamente spalatorie auto self service de la unicul producător din Moldova.<br><br> Fără intermediari,menite sa asigure clientilor tai masini curate si incredere in serviciile tale.<br><br> 
@@ -30,7 +30,7 @@
         </div>
         </a>
         <br>
-        <img src="sp1.jpg" width="100%" height="100%" class="img-pr" >
+        <img src="sp1.jpg" width="100%" class="img-pr" >
         <br><br>
         <div class="text-1">
             <center><a name="3" ></a>
@@ -52,7 +52,7 @@
             </center>
         </div>
         <br>
-        <img src="sp3.jpg" width="100%" height="100%" class="img-pr"  >
+        <img src="sp3.jpg" width="100%" class="img-pr"  >
         <br><br>
 
         <div class="text-1" >
@@ -76,7 +76,7 @@
 
         </div>
         <br>
-        <img src="sp4.jpg" width="100%" height="100%" class="img-pr"  >
+        <img src="sp4.jpg" width="100%" class="img-pr"  >
         <br><br>
         <div class="text-1" >
             <br><a name="5" ></a>
