--- a/index.html
+++ b/index.html
@@ -76,8 +76,13 @@
 
         </div>
         <br>
-        <img src="sp4.jpg" width="100%" class="img-pr"  >
+        <img src="sp4.jpg" width="100%" class="img-pr"  ><br><br>
+        <img src="sp5.png" width="100%" class="img-pr"  ><br><br>
+        <img src="sp6.png" width="100%" class="img-pr"  ><br><br>
+        <img src="sp7.png" width="100%" class="img-pr"  ><br><br>
+        
         <br><br>
+
         <div class="text-1" >
             <br><a name="5" ></a>
             <center>
