--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
         <br>
         <img class="img-pr" src="sp2.jpg" width="100%" ><br><br>
         <a name="2"><div class="text-1"  ><center><br>
-            <h2>Orient</h2>
-            Iti asiguram echipamente spalatorie auto self service de la unicul producător din Moldova.<br><br> Fără intermediari,menite sa asigure clientilor tai masini curate si incredere in serviciile tale.<br><br> 
-            Performanta echipamentelor este asigurata de  cele 3 programe din configuratia de baza!<br><br><br>
-            Program 1:  Pulverizare detergent<br><br>
-            Program 2:  Spalare/Clatire sub presiune <br><br>
-            Program 3:  Pulverizare ceara.<br> <br><br>
-            Dimensiunea unei piste este  5 m/latime cu lungimea de 5.5 m si inaltime de 3 m. Inaltimea totala este de 3,9 m. <br><br>
+            <h2>Orient</h2></center><div style="position:relative; left:2%">
+            -Executăm spalatorii self service la cele mai mici preturi de pe piata cu materialele noastre sau ale clientului.<br>
+-Predare la cheie .<br>
+-Vindem si structuri, automatizari complete si aspiratoare cu montaj.<br>
+-Executam  terasamentul, canalizare, bransamente subterane, fundatie, placa beton, rigole, policarbonat sau metal profilat pe acoperis, panou sanwich intre piste si structura <br>
+-Pentru oferta personalizata sunati!Atentie doar pe aceste 3 tipuri de structuri cu care lucram avem acest pret,daca clientul prefera alt model de structura pretul difera.<br>
+-Automatizarea contine componente de ultima generatie.<br>
+-Automatizarea cu 4 programe de spalare<br><br>
         </center>
+    </div>
         </div>
         </a>
         <br>
