--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <body topmargin="2%" leftmargin="2%" rightmargin="2%" >
         <div class="navbar">
             <a href="#2">OrientMd</a> 
-            <a href="#3">Pachetul de baza</a> 
-            <a href="#4">Pachetul opțional</a> 
-            <a href="#5">Contacte</a>
+            <a href="#3">Pachetele</a> 
+            <a href="#5">Obiectivele</a> 
+            <a href="#5">Obiectivele</a> 
+            <a href="#6">Contacte</a>
           </div>
 
         <br>
@@ -79,6 +80,35 @@
         </div>
         <br>
         <img src="sp4.jpg" width="100%" class="img-pr"  ><br><br>
+
+        <div class="text-1" >
+            <a name="5"></a>
+        <br>
+        
+        <center><h2>Obiectivele noastre pentru deschiderea instalației includ:<br><br></h2></center>
+        
+ <div style="position: relative; left:2%" >
+1) Analiza locației.<br><br>
+2) Furnizarea unui plan de afaceri.<br><br>
+3) Dezvoltarea conceptului  self service auto.<br><br>
+4) Elaborarea documentației de construcție și inginerie pentru proiect.<br><br>
+5) Producție.<br><br>
+6) Livrare.<br><br>
+7) Instalare.<br><br>
+8) Punerea în funcțiune.<br><br>
+9) Instruirea personalului de spălat auto în aspecte tehnice de întreținere a echipamentelor.<br><br>
+10) Test de rulare.<br><br>
+11) Analiza prețurilor serviciilor din regiune.<br><br>
+12) Dezvoltarea de activități de marketing la începutul proiectului pentru a atrage clienții.<br><br>
+13) Garanție și servicii post-vânzare.<br><br>
+14) Furnizarea de consumabile la prețuri afiliate.<br><br>
+15) Schimb de experiență și recomandări pentru atragerea clienților și combaterea concurenților.<br><br>
+16) Monitorizarea și întreținerea / consultarea reparațiilor de avarie la instalație.<br><br>
+        </div>
+    </div>
+
+<br>
+
         <img src="sp5.png" width="100%" class="img-pr"  ><br><br>
         <img src="sp6.png" width="100%" class="img-pr"  ><br><br>
         <img src="sp7.png" width="100%" class="img-pr"  ><br><br>
@@ -86,7 +116,7 @@
         <br><br>
 
         <div class="text-1" >
-            <br><a name="5" ></a>
+            <br><a name="6" ></a>
             <center>
             CONTECTE:<br><br>
             <a href="tel:+37379420588" >+373 79 420588</a>
