--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <br>
 
         <img src="sp5.png" width="100%" class="img-pr"  ><br><br>
-        <img src="sp6.png" width="100%" class="img-pr"  ><br><br>
+        <!--<img src="sp6.png" width="100%" class="img-pr"  ><br><br>-->
         <img src="sp7.png" width="100%" class="img-pr"  ><br><br>
         
         <br><br>
